unpackaged/objects/Sales_Rollup__c.object
<CustomObject>
  <fields>
    <fullName>AccountId__c</fullName>
    <label>Account ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountOneSfId__c</fullName>
    <label>Account OneSF ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GppCode__c</fullName>
    <label>GPP Code</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GppName__c</fullName>
    <label>GPP Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GroupKey__c</fullName>
    <externalId>true</externalId>
    <label>Group Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>ProductCategory__c</fullName>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ProductLine__c</fullName>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity_CM_TD__c</fullName>
    <label>Quantity CM TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_2_TD__c</fullName>
    <label>Quantity CY-2 TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_2__c</fullName>
    <label>Quantity CY-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_3_TD__c</fullName>
    <label>Quantity CY-3 TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_3__c</fullName>
    <label>Quantity CY-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_CY_TD__c</fullName>
    <label>Quantity CY TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L180D__c</fullName>
    <label>Quantity L180D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L365D__c</fullName>
    <label>Quantity L365D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_L366_731D__c</fullName>
    <label>Quantity L366-731D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LM_TD__c</fullName>
    <label>Quantity LM TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LM__c</fullName>
    <label>Quantity LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LY_CM_TD__c</fullName>
    <label>Quantity LY CM TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LY_LM__c</fullName>
    <label>Quantity LY LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LY_TD__c</fullName>
    <label>Quantity LY TD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Quantity_LY__c</fullName>
    <label>Quantity LY </label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>UseCase__c</fullName>
    <label>Use Case</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Value_CM_TD_USD__c</fullName>
    <label>Value CM TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CM_TD__c</fullName>
    <label>Value CM TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_2_TD_USD__c</fullName>
    <label>Value CY-2 TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_2_TD__c</fullName>
    <label>Value CY-2 TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_2_USD__c</fullName>
    <label>Value CY-2 (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_2__c</fullName>
    <label>Value CY-2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_3_TD_USD__c</fullName>
    <label>Value CY-3 TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_3_TD__c</fullName>
    <label>Value CY-3 TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_3_USD__c</fullName>
    <label>Value CY-3 (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_3__c</fullName>
    <label>Value CY-3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_TD_USD__c</fullName>
    <label>Value CY TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_CY_TD__c</fullName>
    <label>Value CY TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L180D_USD__c</fullName>
    <label>Value L180D (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L180D__c</fullName>
    <label>Value L180D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L365D_USD__c</fullName>
    <label>Value L365D (USD) </label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L365D__c</fullName>
    <label>Value L365D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L366_731D_USD__c</fullName>
    <label>Value L366-731D (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_L366_731D__c</fullName>
    <label>Value L366-731D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LM_TD_USD__c</fullName>
    <label>Value LM TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LM_TD__c</fullName>
    <label>Value LM TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LM_USD__c</fullName>
    <label>Value LM (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LM__c</fullName>
    <label>Value LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_CM_TD_USD__c</fullName>
    <label>Value LY CM TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_CM_TD__c</fullName>
    <label>Value LY CM TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_LM_USD__c</fullName>
    <label>Value LY LM (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_LM__c</fullName>
    <label>Value LY LM   </label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_TD_USD__c</fullName>
    <label>Value LY TD (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_TD__c</fullName>
    <label>Value LY TD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY_USD__c</fullName>
    <label>Value LY (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Value_LY__c</fullName>
    <label>Value LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <label>Sales Rollup</label>
  <nameField>
    <label>Sales Rollup Key</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Sales Rollups</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>